--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react-native": "0.76.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0"
   },
   "private": true
 }
