--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "tinycolor2": "^1.6.0"
   },
