--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.27",
@@ -26,6 +27,8 @@
     "@babel/core": "^7.20.0",
     "@babel/eslint-parser": "^7.26.5",
     "@eslint/js": "^9.18.0",
+    "@types/react": "^18.3.18",
+    "@types/react-native": "^0.73.0",
     "eslint": "^9.18.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
