--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "~52.0.27",
+    "expo": "^52.0.29",
     "expo-status-bar": "~2.0.1",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
