--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@stomp/stompjs": "^7.0.0",
+    "axios": "^1.7.9",
     "expo": "^52.0.29",
     "expo-status-bar": "~2.0.1",
     "prop-types": "^15.8.1",
@@ -21,6 +23,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "sockjs-client": "^1.6.1",
     "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
