--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-kakao/core": "^2.2.6",
+    "@react-native-kakao/user": "^2.2.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.9",
     "expo": "^52.0.29",
+    "expo-build-properties": "~0.13.2",
+    "expo-dev-client": "^5.0.12",
     "expo-status-bar": "~2.0.1",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
