--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-build-properties": "~0.13.2",
     "expo-dev-client": "^5.0.12",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.26.18",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
@@ -28,8 +29,8 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "sockjs-client": "^1.6.1",
-    "tinycolor2": "^1.6.0",
-    "expo-updates": "~0.26.18"
+    "text-encoding": "^0.7.0",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
