--- a/.easignore
+++ b/.easignore
@@ -1,5 +1,3 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
@@ -35,9 +33,6 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
-#env files
-.env
 
-
-#google-services
-google-services.json
+/ios
+/android
