--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.9",
-    "expo": "^52.0.29",
+    "expo": "~52.0.36",
     "expo-build-properties": "~0.13.2",
     "expo-dev-client": "^5.0.12",
     "expo-status-bar": "~2.0.1",
-    "expo-updates": "~0.26.18",
+    "expo-updates": "~0.27.1",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "sockjs-client": "^1.6.1",
     "text-encoding": "^0.7.0",
-    "tinycolor2": "^1.6.0"
+    "tinycolor2": "^1.6.0",
+    "expo-notifications": "~0.29.13",
+    "expo-device": "~7.0.2",
+    "expo-constants": "~17.0.7",
+    "expo-linking": "~7.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
