fix: android scheme 수정
- 이 변경으로 앱 링크 기능이 제대로 작동함

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="com.kimwootae.roommatefe"/>
-        <data android:scheme="exp+roommate-fe"/>
+        <data android:scheme="com.roommate.roommate"/>
+        <data android:scheme="exp+roommate"/>
       </intent-filter>
     </activity>
     <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity" android:exported="true">
