--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "expo-notifications": "~0.29.13",
     "expo-device": "~7.0.2",
     "expo-constants": "~17.0.7",
-    "expo-linking": "~7.0.5"
+    "expo-linking": "~7.0.5",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
