--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "expo-device": "~7.0.2",
     "expo-constants": "~17.0.7",
     "expo-linking": "~7.0.5",
-    "expo-secure-store": "~14.0.1"
+    "expo-secure-store": "~14.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
