--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-kakao/core": "^2.2.6",
     "@react-native-kakao/user": "^2.2.6",
+    "@react-native-seoul/naver-login": "^4.0.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.9",
     "expo": "~52.0.36",
+    "expo-auth-session": "~6.0.3",
     "expo-build-properties": "~0.13.2",
+    "expo-constants": "~17.0.7",
     "expo-dev-client": "^5.0.12",
+    "expo-device": "~7.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.13",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.1",
+    "expo-web-browser": "~14.0.2",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
@@ -30,13 +39,7 @@
     "react-native-screens": "~4.4.0",
     "sockjs-client": "^1.6.1",
     "text-encoding": "^0.7.0",
-    "tinycolor2": "^1.6.0",
-    "expo-notifications": "~0.29.13",
-    "expo-device": "~7.0.2",
-    "expo-constants": "~17.0.7",
-    "expo-linking": "~7.0.5",
-    "expo-secure-store": "~14.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
