feat: 현재 채팅 방에 있을 때 메시지 오면 알림 오지 않도록 수정정

--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,14 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "developmentClient": false,
+      "distribution": "store",
+      "android": {
+        "buildType": "apk"
+      },
+      "ios": {
+        "simulator": false
+      }
     }
   },
   "submit": {
