feat: 채팅 목록 내용 실시간 업데이트 되도록 수정

--- a/eas.json
+++ b/eas.json
@@ -12,10 +12,11 @@
       "distribution": "internal"
     },
     "production": {
+      "autoIncrement": true,
       "developmentClient": false,
       "distribution": "store",
       "android": {
-        "buildType": "apk"
+        "buildType": "app-bundle"
       },
       "ios": {
         "simulator": false
